--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-head
+append head
   link(rel='stylesheet',type='text/css',href='/stylesheets/css/cupertino/jquery-ui-1.8.18.custom.css')
   //link(rel='stylesheet',type='text/css',href='/resources/css/ext-all.css')
   //script(type='text/javascript',src='/javascripts/ext-debug.js')  
@@ -6,7 +6,7 @@ head
   script(type='text/javascript',src='/javascripts/jquery-ui-1.8.18.custom.min.js')
   //script(type='text/javascript',src='/javascripts/app.js')
   script(type='text/javascript',src='/javascripts/jquiapp.js')
-body
+append body
   div(id='login',class='ui-widget')
     h2 Login Status
     div(id='status')
@@ -14,6 +14,15 @@ body
     
   div(id='fwd-status',class='ui-widget')
     h2 FWD Status
+    p(id="state")
     p(id="uptime")
     p(id="fwdd")
     p(id="memory")
+    
+  div(id='re-status',class='ui-widget')
+    h2 RE Status
+    p(id="cpubackground")
+    p(id="cpuidle")
+    p(id="cpusystem")
+    p(id="cpuuser")
+    p(id="model")
