--- a/views/portal.jade
+++ b/views/portal.jade
@@ -1,9 +1,6 @@
 append head
-  //link(rel='stylesheet',type='text/css',href='/stylesheets/css/cupertino/jquery-ui-1.8.18.custom.css')
-  link(rel='stylesheet',type='text/css',href='/resources/css/ext-all.css')
-  script(type='text/javascript',src='/javascripts/ext-debug.js')  
+  link(rel='stylesheet',type='text/css',href='/stylesheets/css/cupertino/jquery-ui-1.8.18.custom.css')
   script(type='text/javascript',src='/javascripts/jquery-1.7.2.min.js')
-  //script(type='text/javascript',src='/javascripts/jquery-ui-1.8.18.custom.min.js')
-  //script(type='text/javascript',src='/javascripts/jquiapp.js')
+  script(type='text/javascript',src='/javascripts/jquery-ui-1.8.18.custom.min.js')
 append body
     p hello
