--- a/views/portal.jade
+++ b/views/portal.jade
@@ -2,5 +2,9 @@ append head
   link(rel='stylesheet',type='text/css',href='/stylesheets/css/cupertino/jquery-ui-1.8.18.custom.css')
   script(type='text/javascript',src='/javascripts/jquery-1.7.2.min.js')
   script(type='text/javascript',src='/javascripts/jquery-ui-1.8.18.custom.min.js')
+  script(type='text/javascript',src='/javascripts/portal.js')
 append body
-    p hello
+    div(id='statusBox', style="status-box")
+      p(id='hostname') Hostname:
+      p(id='model') Model:
+      p(id='version') Version:
